flux/infrastructure/gitea/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea-web
  namespace: gitea
spec:
  selector:
    app: gitea
  ports:
    - port: 3000
      targetPort: 3000
