flux/infrastructure/gitea/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gitea
  namespace: gitea
spec:
  parentRefs:
    - name: dev-local
      namespace: default
      sectionName: https
  hostnames:
    - gitea.dev.local
  rules:
    - backendRefs:
        - name: gitea-web
          port: 3000
